layout structure done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,67 @@
 	<title>Advantage</title>
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap.css">
 	<script type="text/javascript" src="bootstrap.js"></script>
+	<style type="text/css">
+	/*	.row, .col {
+			border: solid 1px blue;
+		}*/
+		div{
+			border: solid 1px blue;
+		}
+	</style>
 </head>
 <body>
-<h1>HELLO</h1>
+	<div class="container">
+		<!-- Header -->
+		<div class="row">
+			<div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+  			<div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+		<!-- Menu -->
+		<div class="row">
+			<div class="col-lg-3">Rate & Reservations</div>
+			<div class="col-lg-3">A-Pass online check-in</div>
+			<div class="col-lg-2">A-Pass online check-in</div>
+			<div class="col-lg-2">A-Pass online check-in</div>
+			<div class="col-lg-2">A-Pass online check-in</div>
+		</div>
+		<!-- Progress -->
+		<div class="row">
+			<div class="col-lg-2">Step 1</div>
+			<div class="col-lg-5">Step 2</div>
+			<div class="col-lg-2">Step 3</div>
+			<div class="col-lg-3">Step 4</div>
+		</div>
+		<!-- Main Body -->
+		<div class="row">
+			<div class="col-lg-8">
+				<!-- Car Details -->
+				<div class="row">
+					<div class="col-lg-2">Step 1</div>
+					<div class="col-lg-4">Step 2</div>
+					<div class="col-lg-3">Step 3</div>
+					<div class="col-lg-3">Step 4</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-2">Step 1</div>
+					<div class="col-lg-4">Step 2</div>
+					<div class="col-lg-3">Step 3</div>
+					<div class="col-lg-3">Step 4</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-2">Step 1</div>
+					<div class="col-lg-4">Step 2</div>
+					<div class="col-lg-3">Step 3</div>
+					<div class="col-lg-3">Step 4</div>
+				</div>
+			</div>
+			<div class="col-lg-4">Itenary</div>
+			<!-- Itenary -->
+		</div>
+		<!-- Footer -->
+		<div class="row">
+
+		</div>
+	</div>
 </body>
 </html>
